Improved/Fixed testing

--- a/Engine_Tester_Firmware/Engine_Tester_Firmware.ioc
+++ b/Engine_Tester_Firmware/Engine_Tester_Firmware.ioc
@@ -10,7 +10,7 @@ Mcu.UserName=STM32F030K6Tx
 Mcu.PinsNb=18
 SPI1.VirtualType=VM_MASTER
 ProjectManager.NoMain=false
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
 PA10.GPIO_PuPd=GPIO_PULLDOWN
 USART1.BaudRate=115200
 RCC.PLLCLKFreq_Value=48000000
@@ -59,7 +59,7 @@ Mcu.IPNb=5
 ProjectManager.PreviousToolchain=
 PA9.Signal=GPIO_Input
 PB5.Locked=true
-SPI1.CalculateBaudRate=6.0 MBits/s
+SPI1.CalculateBaudRate=1.5 MBits/s
 PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
 Mcu.Pin6=PA7
 Mcu.Pin7=PA8
@@ -95,6 +95,7 @@ SPI1.Mode=SPI_MODE_MASTER
 PA14.Mode=Serial_Wire
 PA5.GPIO_PuPd=GPIO_PULLDOWN
 PB5.Mode=TX_Only_Simplex_Unidirect_Master
+SPI1.DataSize=SPI_DATASIZE_8BIT
 File.Version=6
 PA10.GPIO_Label=ENGINE_OUT_6
 PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -158,7 +159,7 @@ RCC.APB1TimFreq_Value=48000000
 PA2.Mode=Asynchronous
 PA12.GPIO_PuPd=GPIO_PULLDOWN
 RCC.APB1Freq_Value=48000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 PA4.GPIO_Label=ENGINE_OUT_0
 PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
 ProjectManager.CustomerFirmwarePackage=
